cabal-version: 2.2

name: wreq-extra
version: 1.0
synopsis: Exploring non-throwing get and post calls with wreq
description: Exploring how wreq handles non-2XX codes and working out how to
  NOT throw an IO exception when this occurs. This could also be used as a
  library in this form where clients import getAny and postAny from
  Network.Wreq.Extra
author: Dino Morelli
maintainer: dino@ui3.info
copyright: 2024 Dino Morelli
category: Unclassified
license: ISC
license-file: LICENSE
build-type: Simple
extra-source-files:
  CHANGELOG.md
  .gitignore
  README.md
  stack.yaml

source-repository head
  type: git
  location: https://github.com/dino-/wreq-extra

common lang
  default-language: Haskell2010
  ghc-options:
    -fwarn-tabs
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

library
  import: lang
  exposed-modules:
    Network.Wreq.Extra
  hs-source-dirs:
    src/lib
  build-depends:
      base >=3 && <5
    , bytestring
    , microlens
    , wreq

test-suite basic-wrk-test-suite
  import: lang
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
    src/test
  ghc-options: -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      base >=3 && <5
    , bytestring
    , microlens
    , string-conv
    , tasty
    , tasty-hunit
    , wreq
    , wreq-extra
