cabal-version: 2.2

name: wreq-extra
version: 1.0
synopsis: Implemented non-throwing get and post calls with wreq
description: Versions of get and post that do not throw non-2XX response codes
  and/or also do not throw other exceptions, instead expressing them as the
  Left side of an Either.
author: Dino Morelli
maintainer: dino@ui3.info
copyright: 2024 Dino Morelli
category: Unclassified
license: ISC
license-file: LICENSE
build-type: Simple
extra-source-files:
  CHANGELOG.md
  .gitignore
  README.md
  stack.yaml

source-repository head
  type: git
  location: https://github.com/dino-/wreq-extra

common lang
  default-language: Haskell2010
  ghc-options:
    -fwarn-tabs
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

library
  import: lang
  exposed-modules:
    Network.Wreq.Extra
  hs-source-dirs:
    src/lib
  build-depends:
      base >=3 && <5
    , bytestring
    , http-client
    , lens
    , wreq >=0.5.0.0

test-suite basic-wrk-test-suite
  import: lang
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  other-modules:
    Test.Network.Wreq.Extra
  hs-source-dirs:
    src/test
  ghc-options: -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      base >=3 && <5
    , bytestring
    , http-client
    , lens
    , string-conv
    , tasty
    , tasty-hunit
    , wreq >=0.5.0.0
    , wreq-extra
